--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -21,7 +21,7 @@
       <body id="root"></body>
       <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js"></script>
       <script type="text/javascript" filename="ChannelWeb.html">
-        const WEBAPPS = importHTMLAPP([
+        WEBAPPS([
           "https://az000za.github.io/AZ000ZA/routes.html",
           "https://az000za.github.io/DevCore/DevCore.html",
           "https://az000za.github.io/PeerNetBrowser/PeerNet.html",
@@ -39,8 +39,7 @@
           "https://az000za.github.io/Chat/seed.html",
           "https://az000za.github.io/WASM/compile.html",
           "https://az000za.github.io/WASM/fetch.html"
-        ]);
-        WEBAPPS.DevCore()
+        ]).useApp("DevCore")
             .Application(
                 {
                     "name": "ChannelWeb",
