--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -39,7 +39,7 @@
           "https://az000za.github.io/Chat/seed.html",
           "https://az000za.github.io/WASM/compile.html",
           "https://az000za.github.io/WASM/fetch.html"
-        ]).useApp("DevCore")
+        ]).useAPP("DevCore")
             .Application(
                 {
                     "name": "ChannelWeb",
