--- a/routes.html
+++ b/routes.html
@@ -1,8 +1,8 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="./DevCore/ImportHTMLAPP.js">
+    <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js">
         const APPS = importHTMLAPP([
-        "./DevCore/Data.html",
+            "https://az000za.github.io/__DZTRUCTAUTO__/data.html",
         ]);
     </script>
     <script type="text/javascript">
