--- a/routes.html
+++ b/routes.html
@@ -1,11 +1,9 @@
 <html>
     <body id="root"></body>
-    <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js">
-        const APPS = importHTMLAPP([
+    <script type="text/javascript">
+        WEBAPPS([
             "https://az000za.github.io/__DZTRUCTAUTO__/data.html",
         ]);
-    </script>
-    <script type="text/javascript">
         class Routes {
             /**
              * bar: is the sidebar nav that transforms the messages & forms
