--- a/routes.html
+++ b/routes.html
@@ -1,5 +1,6 @@
 <html>
     <body id="root"></body>
+    <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js"></script>
     <script type="text/javascript">
         WEBAPPS([
             "https://az000za.github.io/__DZTRUCTAUTO__/data.html",
