--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -21,7 +21,7 @@
       <body id="root"></body>
       <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js"></script>
       <script type="text/javascript" filename="ChannelWeb.html">
-        new WEBAPPS([
+        new WEBAPPS().fetchAPPS([
           "https://az000za.github.io/AZ000ZA/routes.html",
           "https://az000za.github.io/DevCore/DevCore.html",
           "https://az000za.github.io/PeerNetBrowser/PeerNet.html",
