--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -21,7 +21,8 @@
           "https://az000za.github.io/WASM/compile.html",
           "https://az000za.github.io/WASM/fetch.html"
         ]).then((_this_)=>{
-            console.log("DevCore APP", _this_.useAPP("DevCore"));
+            console.log("DevCore APP", _this_);
+            // _this_.useAPP("DevCore")
             // .Application(
             //     {
             //         "name": "ChannelWeb",
