--- a/ChannelWebAI.html
+++ b/ChannelWebAI.html
@@ -2,7 +2,7 @@
       <body id="root"></body>
       <script type="text/javascript" src="https://az000za.github.io/WEBAPPS/WEBAPPS.js"></script>
       <script type="text/javascript" filename="ChannelWeb.html">
-        new WEBAPPS().fetchAPPS([
+        const DEPENDENCIES = [
           "https://az000za.github.io/AZ000ZA/routes.html",
           "https://az000za.github.io/DevCore/DevCore.html",
           "https://az000za.github.io/PeerNetBrowser/PeerNet.html",
@@ -20,37 +20,40 @@
           "https://az000za.github.io/Chat/seed.html",
           "https://az000za.github.io/WASM/compile.html",
           "https://az000za.github.io/WASM/fetch.html"
-        ]).then((_this_)=>{
-            console.log("DevCore APP", _this_);
-            _this_.useAPP("DevCore")
-            .then((DevCore)=>{
-                  const instance = new DevCore();
-                  console.log("instance", instance);
-                  instance.Application(
-                      {
-                          "name": "ChannelWeb",
-                          "version": "1.0.0",
-                          "description": "Turn every url into a chat channel powered by AI",
-                          "keywords": ["awesome", "great", "package"],
-                          "author": "Devon Houghton <1.a.b.c.0.0.0.x.y.z.1@gmail.com>",
-                          "license": "none",
-                          "main": "app.ChannelWebAI.html",
-                          "files": ["index.html", "README.md"],
-                          "scripts": {
-                            "test": "mocha",
-                            "start": "wwwnode ChannelWebAI.html",
-                          },
-                          "repository": {
-                            "type": "git",
-                            "url": "https://github.com/az000za/ChannelWebAI.html"
-                          },
-                          "dependencies": {},
-                          "devDependencies": {},
-                        }
-                  )
-                  .addComponents(WEBAPPS)
-                  .run();
-        })
+        ];   
+        new WEBAPPS()
+              .fetchAPPS(DEPENDENCIES)
+              .then((_this_)=>{
+                  console.log("DevCore APP", _this_);
+                  _this_.useAPP("DevCore")
+                  .then((DevCore)=>{
+                        const instance = new DevCore();
+                        console.log("instance", instance);
+                        instance.Application(
+                            {
+                                "name": "ChannelWeb",
+                                "version": "1.0.0",
+                                "description": "Turn every url into a chat channel powered by AI",
+                                "keywords": ["awesome", "great", "package"],
+                                "author": "Devon Houghton <1.a.b.c.0.0.0.x.y.z.1@gmail.com>",
+                                "license": "none",
+                                "main": "app.ChannelWebAI.html",
+                                "files": ["index.html", "README.md"],
+                                "scripts": {
+                                  "test": "mocha",
+                                  "start": "wwwnode ChannelWebAI.html",
+                                },
+                                "repository": {
+                                  "type": "git",
+                                  "url": "https://github.com/az000za/ChannelWebAI.html"
+                                },
+                                "dependencies": {},
+                                "devDependencies": {},
+                              }
+                        )
+                        .addComponents(DEPENDENCIES)
+                        .run();
+              })
       });
       </script>
 </html>
